# NWabiSabi-Rust

./: .gitignore  Cargo.toml  FFI_GUIDE.md  IMPLEMENTATION_STATUS.md  Makefile  NIX_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  cbindgen.toml  flake.nix  pyproject.toml
.github/workflows/: ci.yml
examples/: ffi_example.c
python/tests/: test_round_trip.py
src/: constants.rs  credential_issuer.rs  error.rs  lib.rs  wabisabi_client.rs
src/credential_requesting/: credentials_request.rs  credentials_response.rs  issuance_request.rs  mod.rs  validation.rs
src/crypto/: clsag.rs  generators.rs  group_element.rs  group_element_vector.rs  issuer_key.rs  mac.rs  mod.rs  scalar.rs  scalar_vector.rs
src/crypto/randomness/: insecure_random.rs  mod.rs  secure_random.rs
src/ffi/: exports.rs  mod.rs  types.rs
src/python/: mod.rs
src/zero_knowledge/: credential.rs  credential_presentation.rs  mod.rs  nonce_provider.rs  proof.rs  proof_system.rs  registration.rs  statements.rs  transcript.rs
src/zero_knowledge/linear_relation/: equation.rs  knowledge.rs  mod.rs  statement.rs
tests/: credential_request_csharp_tests.rs  credential_tests.rs  crypto_primitive_tests.rs  csharp_ported_tests.rs  proof_system_csharp_tests.rs  proof_system_tests.rs  round_trip_tests.rs  transcript_tests.rs
